[gd_scene load_steps=8 format=3 uid="uid://bd0cyhnqckqid"]

[ext_resource type="Script" uid="uid://c04fg2q27t7iw" path="res://Scripts/BattleSettingsPopup.gd" id="1_abc123"]
[ext_resource type="FontFile" uid="uid://l1q8mfvbxty3" path="res://Fonts/dyslexiafont/OpenDyslexic-Regular.otf" id="2_def456"]
[ext_resource type="Texture2D" uid="uid://cct70l6wbh13s" path="res://gui/Update/UI/ui 9.png" id="2_q73on"]
[ext_resource type="FontFile" uid="uid://bdlqaeel30c00" path="res://Fonts/dyslexiafont/OpenDyslexic-Bold.otf" id="3_ghi789"]
[ext_resource type="Texture2D" uid="uid://5kclvhwf1uke" path="res://gui/Update/UI/green button.png" id="5_vsnvw"]
[ext_resource type="Texture2D" uid="uid://cylxg6njg7bam" path="res://gui/Update/UI/yellow button.png" id="6_lpdrl"]
[ext_resource type="Texture2D" uid="uid://cmvfv5h4u7j6e" path="res://gui/Update/icons/close icon.png" id="7_lpdrl"]

[node name="BattleSettingsPopup" type="CanvasLayer"]
script = ExtResource("1_abc123")

[node name="Background" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
color = Color(0, 0, 0, 0.7)

[node name="PopupPanel" type="TextureRect" parent="."]
custom_minimum_size = Vector2(400, 300)
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -150.0
offset_right = 200.0
offset_bottom = 150.0
texture = ExtResource("2_q73on")

[node name="VBoxContainer" type="VBoxContainer" parent="PopupPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = 20.0
offset_right = -20.0
offset_bottom = -20.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 20

[node name="Title" type="Label" parent="PopupPanel/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("3_ghi789")
theme_override_font_sizes/font_size = 24
text = "Setting"
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="PopupPanel/VBoxContainer"]
layout_mode = 2

[node name="MessageLabel" type="Label" parent="PopupPanel/VBoxContainer"]
custom_minimum_size = Vector2(1, 1)
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("2_def456")
theme_override_font_sizes/font_size = 16
text = "Starting this battle will consume 2 energy.
Are you ready to engage?"
horizontal_alignment = 1
autowrap_mode = 2

[node name="HSeparator2" type="HSeparator" parent="PopupPanel/VBoxContainer"]
layout_mode = 2

[node name="ButtonContainer" type="HBoxContainer" parent="PopupPanel/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 20
alignment = 1

[node name="EngageButton" type="Button" parent="PopupPanel/VBoxContainer/ButtonContainer"]
custom_minimum_size = Vector2(120, 50)
layout_mode = 2
mouse_default_cursor_shape = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("2_def456")
theme_override_font_sizes/font_size = 18
text = "Engage"
icon = ExtResource("5_vsnvw")
flat = true
icon_alignment = 1
expand_icon = true

[node name="QuitButton" type="Button" parent="PopupPanel/VBoxContainer/ButtonContainer"]
custom_minimum_size = Vector2(120, 50)
layout_mode = 2
mouse_default_cursor_shape = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("2_def456")
theme_override_font_sizes/font_size = 18
text = "Leave"
icon = ExtResource("6_lpdrl")
flat = true
icon_alignment = 1
expand_icon = true

[node name="CloseButton" type="TextureButton" parent="PopupPanel"]
layout_mode = 0
offset_left = 369.0
offset_top = -12.0
offset_right = 378.0
offset_bottom = -3.0
scale = Vector2(4.23823, 4.23823)
mouse_default_cursor_shape = 2
texture_normal = ExtResource("7_lpdrl")
